@startuml

class TodoListApplication {
    +void start(Stage)
    +{static}void main()
}

class TodoListApplicationController {
    ..@FXML Variables..
    -TableColumn<Item, Boolean> completedColumn
    -TableColumn<Item, String> descriptionColumn
    -Label descriptionCharCounter
    -TableColumn<Item, String> dueDateColumn
    -Button exportButton
    -Button importButton
    -TableView<Item> itemTable
    -private TextField newDescriptionField
    -private DatePicker newDueDateField
    -private Label selectedItemCounter
    ..Other Variables..
    -ItemList items
    -StringConverter<LocalDate> converter
    -Validator validator
    --
    ..@FXML Methods..
    void onAboutButtonClicked()
    void onAddItemButtonClicked()
    void onAllItemsButtonClicked()
    void onClearButtonClicked()
    void onCompleteItemsButtonClicked()
    void onDateSortButtonClicked()
    void onDescriptionFieldFill()
    void onDueDateColumnEdit(CellEditEvent<Item, String>)
    void onExportButtonClicked()
    void onImportButtonClicked()
    void onIncompleteItemsButtonClicked()
    void onRemoveButtonClicked()
    +void initialize()
}

class AboutSceneController {
    ..@FXML Variables..
    -ListView<Guide> guideList
    -WebView guideView
    ..Other Variables..
    -WebEngine engine
    -ObservableList<Guide> list
    --
    ..@FXML Methods..
    void onCloseButtonClicked()
    +void initialize()
    ..Other Methods..
    +void loadPage(String)
}

class Item {
    -String description
    -String dueDate
    -SimpleBooleanProperty completed

    +String getDescription()
    +String getDueDate()
    +SimpleBooleanProperty getCompleted()
    +boolean getCompletedValue()
    +void setDescription(String)
    +void setDueDate(String dueDate)
    +void setDueDate(LocalDate)
    +void setCompleted(SimpleBooleanProperty)
}

class ItemList {
    -ObservableList<Item> items

    +void createAndAddItem(String, String)
    +void createAndAddItem(String, LocalDate)
    +void removeSelectedItems(List<Item>)
    +void clear()
    +void sortByDate()
    +FilteredList<Item> filterCompleteItems()
    +FilteredList<Item> filterIncompleteItems()
    +ObservableList<Item> getList()
    +void setItemList(List<Item>)
}

class Guide {
    -String title
    -String localHtml
    --
    ..Overridden Methods..
    +String toString()
    ..Other Methods..
    +String getLocalHtml()

}

class Validator {
    +String verifyDescription(String)
    +String verifyDueDate(String)
    +void editDescription(Item, String)
}

class FileHandler {
    -File path
    -List<Item> list

    +List<Item> fileImport()
    +String fileExport()
}

class WrappedTextFieldTableCell {
    -Text description
    --
    ..Overridden Methods..
    +void cancelEdit()
    +void updateItem(Item, boolean)
    ..Other Methods..
    +Text wrappedText()
}

TodoListApplication -- TodoListApplicationController : < Initializes Main Stage
TodoListApplicationController -- AboutSceneController : < Initializes About Stage
TodoListApplicationController o-- ItemList
TodoListApplicationController o-- Validator
TodoListApplicationController o-- FileHandler
TodoListApplicationController o-- WrappedTextFieldTableCell
ItemList *-- Item
AboutSceneController o-- Guide

note right of ItemList::items
    Contains many Items
end note

@enduml